# sipin-unzip-dispatch-service

./: .env.example  Dockerfile  README.md  config.yml  main.py  pyproject.toml
.openshift/: Jenkinsfile  sipin-unzip-dispatch-service-multibranch-pipeline.xml
openshift/: Jenkinsfile  sipin-unzip-dispatch-service-multibranch-pipeline.xml
